TestSuite/errors/err0270.pas
type
  IInterface = abstract interface
  end;

begin
end.